--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "dotenv": "^6.2.0",
-    "eslint": "^5.14.1"
+    "dotenv": "^6.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0"
   }
 }
